force-app/main/default/objects/WellnessCaseDetail__c/WellnessCaseDetail__c.object-meta.xml
<CustomObject>
    <description>Used in Wellness</description>
    <label>Case Detail</label>
    <nameField>
        <displayFormat>WL-{0000}</displayFormat>
        <label>Wellness Case Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>