force-app/main/default/objects/WellnessCaseDetail__c/fields/ActivityDescription__c.field-meta.xml
<CustomField>
    <fullName>ActivityDescription__c</fullName>
    <description>Used in API calls</description>
    <label>ActivityDescription</label>
    <type>TextArea</type>
</CustomField>