force-app/main/default/objects/WellnessCaseDetail__c/fields/ActivitySubject__c.field-meta.xml
<CustomField>
    <fullName>ActivitySubject__c</fullName>
    <description>Used in API calls</description>
    <label>ActivitySubject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>