force-app/main/default/objects/WellnessCaseDetail__c/fields/BillableTimeActual__c.field-meta.xml
<CustomField>
    <fullName>BillableTimeActual__c</fullName>
    <description>This is difference between case creation and case resolution time. It considers working hours and days. It is stored as Milliseconds</description>
    <label>Billable Time Actual</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>