force-app/main/default/objects/WellnessCaseDetail__c/fields/BillableTimeText__c.field-meta.xml
<CustomField>
    <fullName>BillableTimeText__c</fullName>
    <description>This is difference between case creation and case resolution time. It needs to consider working hours and days.</description>
    <label>Billable Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>