force-app/main/default/objects/WellnessCaseDetail__c/fields/CaseEmail__c.field-meta.xml
<CustomField>
    <fullName>CaseEmail__c</fullName>
    <description>Used to capture email passed by API.</description>
    <label>Case Email</label>
    <type>Email</type>
</CustomField>