force-app/main/default/objects/WellnessCaseDetail__c/fields/DepartmentDependency__c.field-meta.xml
<CustomField>
    <fullName>DepartmentDependency__c</fullName>
    <label>Department Dependency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Team</fullName>
            </value>
            <value>
                <fullName>Partner Team</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>