force-app/main/default/objects/WellnessCaseDetail__c/fields/FCR__c.field-meta.xml
<CustomField>
    <fullName>FCR__c</fullName>
    <label>FCR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>