force-app/main/default/objects/WellnessCaseDetail__c/fields/IssueCategory__c.field-meta.xml
<CustomField>
    <fullName>IssueCategory__c</fullName>
    <label>Issue Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email ID Error</fullName>
            </value>
            <value>
                <fullName>Multiply Portal - Password Error</fullName>
            </value>
            <value>
                <fullName>Member Id Error</fullName>
            </value>
            <value>
                <fullName>OTP Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>