force-app/main/default/objects/WellnessCaseDetail__c/fields/PartnerName__c.field-meta.xml
<CustomField>
    <fullName>PartnerName__c</fullName>
    <label>Partner Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medibuddy</fullName>
            </value>
            <value>
                <fullName>FitPass</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>