force-app/main/default/objects/WellnessCaseDetail__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Wellness Product</fullName>
            </value>
            <value>
                <fullName>Insurance Plan</fullName>
            </value>
            <value>
                <fullName>Partner Benefits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>