force-app/main/default/objects/WellnessCaseDetail__c/fields/RedFlag__c.field-meta.xml
<CustomField>
    <fullName>Check_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check List</label>
    <fullName>RedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Red Flag</label>
    <type>Checkbox</type>
</CustomField>