force-app/main/default/objects/WellnessCaseDetail__c/fields/Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comments__c</fullName>
    <label>Resolution Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>